--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   
         <!-- Linkedin -->
         <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa fa-linkedin-in"></i
+          ><i class="fa fa-linkedin"></i
         ></a>
   
         <!-- Github -->
